kubeclarity/templates/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kubeclarity-ingress
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`kubeclarity.durp.info`) && PathPrefix(`/`)
    middlewares:
    - name: whitelist
      namespace: traefik
    - name: authentik-proxy-provider
      namespace: traefik  
    kind: Rule
    services:
    - name: kubeclarity-kubeclarity
      port: 8080
  tls:
    secretName: kubeclarity-tls

---

kind: Service
apiVersion: v1
metadata:
  name: kubeclarity-external-dns
  annotations:
    external-dns.alpha.kubernetes.io/hostname: kubeclarity.durp.info
spec:
  type: ExternalName
  externalName: durp.info
